force-app/main/default/objects/ccrz__E_StorefrontConfigSettings__c/ccrz__E_StorefrontConfigSettings__c.object-meta.xml
<CustomObject>
    <description>Holds the mappings of various configurations settings for a storefront, such as payment types, currencies, languages, countries.</description>
    <label>CC Storefront Config Setting</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>CC Storefront Config Settings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Storefront Config Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>