force-app/main/default/objects/ccrz__E_StorefrontConfigSettings__c/fields/ccrz__Type__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Type__c</fullName>
    <label>Type</label>
    <length>150</length>
    <type>Text</type>
</CustomField>