force-app/main/default/objects/ccrz__E_StorefrontConfigSettings__c/fields/ccrz__Value__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Value__c</fullName>
    <label>Value</label>
    <length>150</length>
    <type>Text</type>
</CustomField>